# tauri_template

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  install-mac-dep.sh  install-windows-macos.sh  install_mac_dep.sh  windows-macos.sh
scripts/: docker-entrypoint.sh  docker-exec.sh  set-env.sh
scripts/android/: 51-android.rules  build-apk.sh  run-android.sh
tauri-plugin-template/: Cargo.toml  README.md  package.json
tauri-plugin-template/android/: README.md  build.gradle.kts
tauri-plugin-template/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-template/android/src/main/java/: Example.kt  ExamplePlugin.kt
tauri-plugin-template/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-template/guest-js/: index.ts
tauri-plugin-template/ios/: Package.swift  README.md
tauri-plugin-template/ios/Sources/: ExamplePlugin.swift
tauri-plugin-template/permissions/: default.toml
tauri-plugin-template/permissions/autogenerated/: reference.md
tauri-plugin-template/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
tauri-template-app/: README.md  package-lock.json  package.json
tauri-template-app/src/: README.md
tauri-template-app/src-tauri/: Cargo.toml  README.md  tauri.conf.json
tauri-template-app/src-tauri/capabilities/: desktop.json
tauri-template-app/src-tauri/src/: desktop.rs  lib.rs  main.rs
