[workspace]
members = [
   "tauri-template-app/src-tauri",
   "tauri-plugin-template",
]
resolver = "2"

[workspace.dependencies]

[workspace.lints.clippy]
unused_async = "deny"
rust_2018_idioms = "deny"
missing_docs = "deny"
missing_debug_implementations = "deny" # opt out where Debug is really redundant
future_incompatible = "deny"
unsafe-code = "deny"